fix(backend): factual audit phase 2 — 10 modules re-grounded
File-by-file audit against primary sources (RFCs, vendor docs, library source,
a live PostgreSQL 16.9 cluster). Beyond stale versions and prices, this phase
found defences that do not defend and fixes that do not fix:

- SSRF guard validated the resolved IP then passed the hostname back, so DNS
  re-resolved — the rebinding hole its own caption warned about
- OWASP Top 10 content was a full edition out of date (2021 -> 2025: Injection
  A03->A05, SSRF folded into A01, new A10)
- saga compensation omitted the refund, leaving the customer charged for a
  cancelled order; chargeId was never persisted
- @Transactional self-invocation meant no transaction was starting at all
- "synchronized pins virtual threads" invalidated by JEP 491 (JDK 24), with a
  fabricated HikariCP 5.1 citation for a fix that never shipped
- CAP/2PC/3PC restated correctly; 3PC loses safety, not just availability
- Stack Overflow, Uber, Netflix, Instacart, TAO and Cloudflare claims corrected
  or removed against what those companies actually published
- APIs that do not compile: SynchronousTransferQueue, HikariPool$PoolTimeout-
  Exception, KafkaTemplate.addCallback, RoleHierarchyImpl(), Nimbus verifier

Also fixed Q&A first sentences over extract.py's 220-char ceiling, which were
silently dropping those questions from the quiz bank.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>